new results dec

--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -21,9 +21,9 @@ Rate	&	4.92	&	1.37	&	25.40	&	3.54	&	13.39	&	2.34	\\
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
 Income	&	2.79	&		&	9.94	&		&	5.79	&		\\
 	&	(1.00)	&		&	(4.65)	&		&	(2.41)	&		\\ \midrule
-Labor	&	\textit{.5\% Annual Growth}	&	\textit{Only Benefit}	&	\textit{.5\% Annual Growth}	&	\textit{Only Benefit}	&	\textit{.5\% Annual Growth}	&	\textit{Only Benefit}	\\
-Income	&	2.12	&	0.59	&	7.18	&	3.62	&	4.88	&	0.86	\\
-	&	(0.72)	&	(0.00)	&	(3.97)	&	(0.00)	&	(2.11)	&	(0.00)	\\ \midrule
+Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
+Income	&	2.39	&	2.66	&	8.90	&	10.60	&	5.34	&	5.79	\\
+	&	(0.86)	&	(1.09)	&	(4.35)	&	(5.00)	&	(2.27)	&	(2.53)	\\ \midrule
 Crime	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	\\
 	&	2.64	&	2.17	&	11.74	&	7.28	&	5.25	&	4.06	\\
 	&	(1.02)	&	(0.93)	&	(5.57)	&	(3.44)	&	(2.37)	&	(1.67)	\\ \midrule
