--- a/output/allirr_sens.tex
+++ b/output/allirr_sens.tex
@@ -19,9 +19,9 @@ loss	&	12.8\%	&	6.8\%	&	17.5\%	&	11.8\%	&	17.4\%	&	10.3\%	\\
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
 Income	&	10.4\%	&		&	14.8\%	&		&	14.2\%	&		\\
 	&	(6.9\%)	&		&	(5.3\%) &		&	(5.3\%)	&		\\ \midrule
-Labor	&	\textit{.5\% Annual Growth}	&	\textit{Only Benefit}	&	\textit{.5\% Annual Growth}	&	\textit{Only Benefit}	&	\textit{.5\% Annual Growth}	&	\textit{Only Benefit}	\\
-Income	&	8.0\%	&	N/A	&	12.7\%	&	N/A	&	12.2\%	&	N/A	\\
-	&	(5.3\%)	&		&	(5.4\%) &		&	(4.7\%)	&		\\ \midrule
+Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
+Income	&	8.43\%	&	8.85\%	&	13.5\%	&	14.1\%	&	12.5\%	&	12.7\%	\\
+	&	(5.2\%)	&	(5.1\%)	&	(5.0\%) &	(4.7\%)	&	(4.5\%)	&	(4.5\%)	\\ \midrule
 Crime	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	\\
 	&	8.9\%	&	8.1\%	&	15.3\%	&	12.2\%	&	12.4\%	&	11.0\%	\\
 	&	(5.2\%)	&	(5.1\%)	&	(4.3\%)	&	(4.6\%)	&	(4.4\%)	&	(4.4\%)	\\ \midrule
