last edits of dunday and new bibtex

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -638,7 +638,7 @@ We accompany these estimates with a set of sensitivity checks of statistical and
 
 Our baseline estimations account for the deadweight caused by the government by taxing individuals to budget its expenditure. We account for this in all government-related transactions.\footnote{When the transaction between the government and an individual is a direct transfer, we consider .5 as a cost per each transacted dollar as we do not weight the final recipient of the transaction (e.g., transfer income). When the transaction is indirect, we classify it as government spending as a whole and consider its cost as 1.5 per each dollar spend (e.g. public education).} Our baseline estimation assumes that the marginal tax rate is $50\%$. Our estimates are robust to dropping it to $0\%$ or doubling it to $100\%$ (deadweight loss columns). Our baseline estimation of benefit/cost ratios is based on a discount rate of $3\%$. Not discounting roughly doubles our benefit/cost ratios, while they remain significant under a higher discount rate of $7\%$ (discount rate columns).
 
-Parental income is an important component. As we explain in Section~\ref{section:pincome}, we take a conservative approach in our baseline estimates and do not account for the potential profile shift in parental income due to education and experience. This is based on observed parental income from when the ABC/CARE participants where ages 0 to 21. Alternative approaches considering the gain up to when the parent is 65 years old generate an increase in the gain due to parental income (parental income columns). As we mention in Section~\ref{section:cbamethodology}, our estimates could ignore cohort effects. The individuals in ABC/CARE could experience positive cohort effects that could (i) make them more productive and therefore experience wage growth \citep{Lagakos_Moll_etal_2016_LifeCycle_NBER}; (ii) experience a negative shock such as an economics crisis and therefore experience wage decline \citep{jarosch2014searching}. Our estimates are robust to annual growth and decay rates of $0.5\%$. 
+Parental income is an important component. As we explain in Section~\ref{section:pincome}, we take a conservative approach in our baseline estimates and do not account for the potential profile shift in parental income due to education and experience. This is based on observed parental income from when the ABC/CARE participants where ages 0 to 21. Alternative approaches considering the gain up to when the parent is 65 years old generate an increase in the gain due to parental income (parental income columns). As we mention in Section~\ref{section:cbamethodology}, our estimates could ignore cohort effects. The individuals in ABC/CARE could experience positive cohort effects that could (i) make them more productive and therefore experience wage growth \citep{Lagakos_Moll_etal_2016_LifeCycle_NBER}; (ii) experience a negative shock such as an economics crisis and therefore experience wage decline \citep{Jarosch_2016_JobSecurity_Econometrica}. Our estimates are robust to annual growth and decay rates of $0.5\%$. 
 
 We do not perform sensitivity analysis to investigate cohort effects of health costs. The estimates indicate that treatment individuals are healthier, which reduces medical costs, but also that they live longer, increasing medical costs. These opposing effects negate each other making adjustments to potential cohort effects unecessary.
 
