--- a/heckman.bib
+++ b/heckman.bib
@@ -1,13 +1,6 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
-@article{jarosch2014searching,
-  title={{Searching for job security and the consequences of job loss}},
-  author={Jarosch, Gregor},
-  journal={Forthcoming, \textit{Econometrica}},
-  year={2016}
-}
-
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
@@ -31843,17 +31836,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
-}
-
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -31866,6 +31848,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
+}
+
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -43863,6 +43856,16 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2007.11.23}
 }
 
+@Unpublished{Jarosch_2016_JobSecurity_Econometrica,
+  Title                    = {Searching for Job Security and the Consequences of Job Loss},
+  Author                   = {Jarosch, Gregor},
+  Note                     = {Forthcoming, Econometrica},
+  Year                     = {2016},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.26}
+}
+
 @Article{Jaszczak_2008_FM,
   Title                    = {Using Nonmedically Trained Interviewers to Collect Biomeasures in a National In-Home Survey},
   Author                   = {Jaszczak, Angela and Lundeen, Katie and Smith, Stephen},
@@ -48647,7 +48650,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
 @Unpublished{Lagakos_Moll_etal_2016_LifeCycle_NBER,
   Title                    = {Life-Cycle Wage Growth Across Countries},
-  Author                   = {Lagakos, David and Moll, Benjamin and Porzio, Tommaso and Qian, Nancy  and Schoellman, Todd},
+  Author                   = {Lagakos, David and Moll, Benjamin and Porzio, Tommaso and Qian, Nancy and Schoellman, Todd},
   Note                     = {Forthcoming, Journal of Political Economy},
   Year                     = {2016},
 
