added ttest and edited table

--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -211,7 +211,7 @@ Table~\ref{table:controlsubscharacteristics} shows baseline characteristics betw
 \caption{Baseline Characteristics and Control Substitution}\label{table:controlsubscharacteristics}
 \input{output/abccare_baseline_P}
 \begin{tablenotes}
-\item Note: This table shows the means of the subsets of control-group subjects in ABC/CARE who were and were not enrolled in alternative preschool. The number of subjects in these groups are listed at the top of the table. Standard errors are in parentheses.
+\item Note: This table shows the means of the subsets of control-group subjects in ABC/CARE who were and were not enrolled in alternative preschool. The number of subjects in these groups are listed at the top of the table. Standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. None of the differences are significant.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
