--- a/output/abccare_baseline_P.tex
+++ b/output/abccare_baseline_P.tex
@@ -1,26 +1,26 @@
-\begin{tabular}{l c c}
+\begin{tabular}{l c c c}
 \toprule
-Characteristic & \mc{2}{c}{Control Substitution} \\
-& No & Yes \\
-& $ N=19 $ & $ N=55 $ \\
+Characteristic & \mc{2}{c}{Control Substitution} &  $t$-test\\
+& No & Yes & $ p $ -value\\
+& $ N=19 $ & $ N=55 $ & \\
 \midrule
-Mother's Yrs. of Edu. &      9.74 &     10.35 \\
-                     & (     0.43) & (     0.26)  \\
-Mother's Age &     21.42 &     20.27 \\
-                     & (     1.79) & (     0.63)  \\
-Mother's IQ &     82.00 &     85.60 \\
-                     & (     2.32) & (     1.33)  \\
-HRI Score &     20.95 &     21.60 \\
-                     & (     1.46) & (     0.81)  \\
-Number of Siblings &      1.00 &      0.62 \\
-                     & (     0.38) & (     0.13)  \\
-Male &      0.47 &      0.51 \\
-                     & (     0.12) & (     0.07)  \\
-Birth Year &   1975.58 &   1975.73 \\
-                     & (     0.68) & (     0.32)  \\
-Apgar Score, 1 min. &      7.47 &      7.62 \\
-                     & (     0.43) & (     0.21)  \\
-Apgar Score, 5 min. &      8.63 &      8.98 \\
-                     & (     0.26) & (     0.14)  \\
+Mother's Yrs. of Edu. &      9.74 &     10.35 &      0.23 \\
+                     & (     0.43) & (     0.26)  & \\
+Mother's Age &     21.42 &     20.27 &      0.55 \\
+                     & (     1.79) & (     0.63)  & \\
+Mother's IQ &     82.00 &     85.60 &      0.19 \\
+                     & (     2.32) & (     1.33)  & \\
+HRI Score &     20.95 &     21.60 &      0.70 \\
+                     & (     1.46) & (     0.81)  & \\
+Number of Siblings &      1.00 &      0.62 &      0.35 \\
+                     & (     0.38) & (     0.13)  & \\
+Male &      0.47 &      0.51 &      0.80 \\
+                     & (     0.12) & (     0.07)  & \\
+Birth Year &   1975.58 &   1975.73 &      0.84 \\
+                     & (     0.68) & (     0.32)  & \\
+Apgar Score, 1 min. &      7.47 &      7.62 &      0.76 \\
+                     & (     0.43) & (     0.21)  & \\
+Apgar Score, 5 min. &      8.63 &      8.98 &      0.24 \\
+                     & (     0.26) & (     0.14)  & \\
 \bottomrule
 \end{tabular}
