--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -203,7 +203,7 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 \noindent Note: This figure describes the take-up of alternative preschool by families in the CARE family education and control groups. The vertical axis represents the average number of months per year the subjects of the control group spent in alternative preschool. Subsidized centers were highly regulated and, therefore, relatively high-quality. Non-subsidized childcare services were center-based but not regulated. Other sources of childcare could have included care by parents, relatives, or non-relatives.}
 	\end{figure}
 	
-Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged.
+Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged, with the most stark difference being maternal employment.
 
 \begin{table}[H]
 \centering
@@ -211,7 +211,7 @@ Table~\ref{table:controlsubscharacteristics} shows baseline characteristics betw
 \caption{Baseline Characteristics and Control Substitution}\label{table:controlsubscharacteristics}
 \input{output/abccare_baseline_P}
 \begin{tablenotes}
-\item Note: This table shows the means of the subsets of control-group subjects in ABC/CARE who were and were not enrolled in alternative preschool. The number of subjects in these groups are listed at the top of the table. Standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. None of the differences are significant.
+\item Note: This table shows the means of the subsets of control-group subjects in ABC/CARE who were and were not enrolled in alternative preschool. The number of subjects in these groups are listed at the top of the table. Standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. The means are bolded if the difference is significant at the 10\% level. 
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
