--- a/output/abccare_baseline_P.tex
+++ b/output/abccare_baseline_P.tex
@@ -1,11 +1,13 @@
 \begin{tabular}{l c c c}
 \toprule
-Characteristic & \mc{2}{c}{Control Substitution} &  $t$-test\\
+Characteristic & \mc{2}{c}{Control Substitution} & $ t $ -test\\
 & No & Yes & $ p $ -value\\
 & $ N=19 $ & $ N=55 $ & \\
 \midrule
 Mother's Yrs. of Edu. &      9.74 &     10.35 &      0.23 \\
                      & (     0.43) & (     0.26)  & \\
+Mother Works & \textbf{     0.08} & \textbf{     0.26} &      0.09 \\
+                     & (     0.08) & (     0.07)  & \\
 Mother's Age &     21.42 &     20.27 &      0.55 \\
                      & (     1.79) & (     0.63)  & \\
 Mother's IQ &     82.00 &     85.60 &      0.19 \\
