adding more vars and making it male female pooled

--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -203,18 +203,18 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 \noindent Note: This figure describes the take-up of alternative preschool by families in the CARE family education and control groups. The vertical axis represents the average number of months per year the subjects of the control group spent in alternative preschool. Subsidized centers were highly regulated and, therefore, relatively high-quality. Non-subsidized childcare services were center-based but not regulated. Other sources of childcare could have included care by parents, relatives, or non-relatives.}
 	\end{figure}
 	
-Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged, with the most stark difference being maternal employment.
+Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged, with the most stark difference being maternal employment. This is seen across genders, but is only significant for the female and pooled samples. The males who are enrolled in alternative preschool have mothers with higher IQ scores, but lower parental income indicating lack of spousal support, which is evident by the fewer number of fathers present in that same group. Those who were enrolled in alternative preschools also had more siblings.
 
-\begin{table}[H]
+\begin{sidewaystable}[H]
 \centering
 \begin{threeparttable}
 \caption{Baseline Characteristics and Control Substitution}\label{table:controlsubscharacteristics}
 \input{output/abccare_baseline_P}
 \begin{tablenotes}
-\item Note: This table shows the means of the subsets of control-group subjects in ABC/CARE who were and were not enrolled in alternative preschool. The number of subjects in these groups are listed at the top of the table. Standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. The means are bolded if the difference is significant at the 10\% level. 
+\item Note: This table shows the means by gender of the subsets of control-group subjects in ABC/CARE who were and were not enrolled in alternative preschool. The number of subjects in these groups are listed at the top of the table. Standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. The means are bolded if the difference is significant at the 10\% level. 
 \end{tablenotes}
 \end{threeparttable}
-\end{table}
+\end{sidewaystable}
 
 \subsubsection{Regulation}  \label{appendix:tetanus}
 
