some changes to the paper before the typists

--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -211,7 +211,7 @@ Table~\ref{table:controlsubscharacteristics} shows baseline characteristics betw
 \caption{Baseline Characteristics and Control Substitution}\label{table:controlsubscharacteristics}
 \input{output/abccare_baseline_P}
 \begin{tablenotes}
-\item Note: This table shows the means by gender of the subsets of control-group subjects in ABC/CARE who were and were not enrolled in alternative preschool. The number of subjects in these groups are listed at the top of the table. Standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. The means are bolded if the difference is significant at the 10\% level. 
+\item Note: This table describes baseline characteristics for the children in the control group, by gender and by their alternative preschool enrollment status. The number of subjects in these groups are listed at the top of the table. Asymptotic standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. The means are bolded if the difference is significant at the 10\% level.
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
