--- a/output/allirr_sens.tex
+++ b/output/allirr_sens.tex
@@ -1,31 +1,30 @@
-\begin{tabular}{>{\bfseries}lcccccc} \toprule
-	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	\\
-Baseline	&	\multicolumn{2}{c}{8.7\% (s.e. 5.2\%)}	&	\multicolumn{2}{c}{13.8\% (s.e. 4.8\%)}	&	\multicolumn{2}{c}{12.6\% (s.e. 4.5\%)}	\\ \\
-\multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to Age 79, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Parental income 0 to 21 (child's age),}} \\
-\multicolumn{7}{l}{\textit{Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}}
-\\ \\ \midrule
+\begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
+	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ 
+Baseline	&	\multicolumn{2}{c}{.13 (s.e. .05)}	&	\multicolumn{2}{c}{14 (s.e. .05)}	&	\multicolumn{2}{c}{.10 (s.e. .07)}	\\ \\
+\multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to Age 79, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
+\multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
 Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
-	&	9.2\%	&	8.7\%	&	14.7\%	&	14.8\%	&	13.6\%	&	12.2\%	\\
-	&	(5.9\%)	&	(3.2\%)	&	(6.0\%)	&	(3.7\%)	&	(4.4\%)	&	(3.9\%)	\\ \midrule
+	&	\textbf{0.14}	&	\textbf{0.12}	&	\textbf{0.15}	&	\textbf{0.14}	&	0.10	&	\textbf{0.09}	\\
+	&	(0.05)	&	(0.04)	&	(0.06)	&	(0.04)	&	(0.07)	&	(0.04)	\\ \midrule
 Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
-Span	&	9.9\%	&	12.7\%	&	11.0\%	&	12.7\%	&	10.4\%	&	11.5\%	\\
-	&	(5.6\%)	&	(5.1\%)	&	(4.7\%)	&	(5.1\%)	&	(4.5\%)	&	(4.3\%)	\\ \midrule
+Span	&	\textbf{0.11}	&	\textbf{0.11}	&	\textbf{0.13}	&	\textbf{0.13}	&	0.12	&	\textbf{0.12}	\\
+	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.07)	&	(0.07)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
-factuals	&	13.1\%	&	8.9\%	&	8.5\%	&	16.2\%	&	10.0\%	&	13.2\%	\\
-	&	(4.6\%)	&	(5.7\%)	&	(3.8\%)	&	(4.4\%)	&	(3.4\%	)&	(3.9\%)	\\ \midrule
+factuals	&	\textbf{0.10}	&	\textbf{0.14}	&	\textbf{0.09}	&	\textbf{0.17}	&	\textbf{0.15}	&	0.10	\\
+	&	(0.03)	&	(0.04)	&	(0.04)	&	(0.05)	&	(0.07)	&	(0.07)	\\ \midrule
 Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	\\
-loss	&	12.8\%	&	6.8\%	&	17.5\%	&	11.8\%	&	17.4\%	&	10.3\%	\\
-	&	(8.9\%	)&	(3.7\%)	&	(6.3\%)	&	(4.2\%)	&	(6.4\%)	&	(3.7\%)	\\ \midrule
+loss	&	\textbf{0.19}	&	\textbf{0.11}	&	\textbf{0.19}	&	\textbf{0.12}	&	0.16	&	0.07	\\
+	&	(0.08)	&	(0.04)	&	(0.07)	&	(0.04)	&	(0.14)	&	(0.04)	\\ \midrule
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
-Income	&	10.4\%	&		&	14.8\%	&		&	14.2\%	&		\\
-	&	(6.9\%)	&		&	(5.3\%) &		&	(5.3\%)	&		\\ \midrule
+Income	&	\textbf{0.15}	&	\textbf{0.14}	&	\textbf{0.15}	&	\textbf{0.14}	&	0.13	&	\textbf{0.12}	\\
+	&	(0.06)	&	(0.07)	&	(0.06)	&	(0.07)	&	(0.11)	&	(0.11)	\\ \midrule
 Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
-Income	&	8.43\%	&	8.85\%	&	13.5\%	&	14.1\%	&	12.5\%	&	12.7\%	\\
-	&	(5.2\%)	&	(5.1\%)	&	(5.0\%) &	(4.7\%)	&	(4.5\%)	&	(4.5\%)	\\ \midrule
-Crime	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	\\
-	&	8.9\%	&	8.1\%	&	15.3\%	&	12.2\%	&	12.4\%	&	11.0\%	\\
-	&	(5.2\%)	&	(5.1\%)	&	(4.3\%)	&	(4.6\%)	&	(4.4\%)	&	(4.4\%)	\\ \midrule
-Health	&	\textit{Drop all}	&	\textit{Double Value of Life}	&	\textit{Drop all}	&	\textit{Double Value of Life}	&	\textit{Drop all}	&	\textit{Double Value of Life}	\\
-(QALYs)	&	9.1\%	&	8.5\%	&	13.6\%	&	13.4\%	&	11.2\%	&	12.7\%	\\
-	&	(5.3\%)	&	(5.2\%)	&	(4.9\%)	&	(5.3\%)	&	(5.8\%)	&	(4.5\%)	\\ \bottomrule
-\end{tabular}
+Income	&	\textbf{0.13}	&	\textbf{0.13}	&	\textbf{0.14}	&	\textbf{0.14}	&	0.09	&	0.10	\\
+	&	(0.05	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.07)	&	(0.07)	\\ \midrule
+Crime	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	\\
+	&	\textbf{0.13}	&	\textbf{0.12}	&	\textbf{0.16}	&	\textbf{0.12}	&	0.10	&	0.09	\\
+	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.07)	&	(0.07)	\\ \midrule
+Health	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	\\
+(QALYs)	&	\textbf{0.12}	&	\textbf{0.13}	&	\textbf{0.14}	&	\textbf{0.14}	&	0.10	&	0.10	\\
+	&	(0.06)	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.07)	&	(0.07)	\\ \bottomrule
+\end{tabular} 
