--- a/output/abccare_baseline_P.tex
+++ b/output/abccare_baseline_P.tex
@@ -16,13 +16,13 @@ Mother's IQ &     81.70 &     84.04 &      0.54 &     82.33 &     87.11 &      0
      & $ (     3.15) $ & $ (     1.96) $  & & $ (     3.62) $ & $ (     1.80) $ & & $ (     2.32) $ & $ (     1.33) $  & \\
 Father Present &      0.30 &      0.26 &      0.82 &      0.44 &      0.25 &      0.34 &      0.37 &      0.25 &      0.38 \\
      & $ (     0.15) $ & $ (     0.09) $  & & $ (     0.18) $ & $ (     0.08) $ & & $ (     0.11) $ & $ (     0.06) $  & \\
-Parental Income &   2566.67 &   3499.55 &      0.75 &  11291.43 &   8694.41 &      0.63 &   7264.62 &   5763.97 &      0.65 \\
-     & $ (  2566.67) $ & $ (  1264.46) $  & & $ (  4750.08) $ & $ (  2220.99) $ & & $ (  2986.31) $ & $ (  1256.34) $  & \\
+Parental Income &   2,566.67 &   3,499.55 &      0.75 &  11,291.43 &   8,694.41 &      0.63 &   7,264.62 &   5,763.97 &      0.65 \\
+     & $ (  2,566.67) $ & $ (  1,264.46) $  & & $ (  4,750.08) $ & $ (  2,220.99) $ & & $ (  2,986.31) $ & $ (  1,256.34) $  & \\
 HRI Score &     21.90 &     22.93 &      0.64 &     19.89 &     20.32 &      0.87 &     20.95 &     21.60 &      0.70 \\
      & $ (     1.73) $ & $ (     1.25) $  & & $ (     2.46) $ & $ (     1.00) $ & & $ (     1.46) $ & $ (     0.81) $  & \\
 Number of Siblings &      0.50 &      0.70 &      0.60 &      1.56 &      0.54 &      0.19 &      1.00 &      0.62 &      0.35 \\
      & $ (     0.31) $ & $ (     0.22) $  & & $ (     0.71) $ & $ (     0.14) $ & & $ (     0.38) $ & $ (     0.13) $  & \\
-Male & . & . & . & . & . & . &      0.47 &      0.51 &      0.80 \\
+Male &  &  &  & &  &  &      0.47 &      0.51 &      0.80 \\
 &  & & & &  & & (     0.12) & (     0.07)  & \\
 Birth Year &   1975.50 &   1975.37 &      0.91 &   1975.67 &   1976.07 &      0.71 &   1975.58 &   1975.73 &      0.84 \\
      & $ (     0.99) $ & $ (     0.42) $  & & $ (     0.97) $ & $ (     0.48) $ & & $ (     0.68) $ & $ (     0.32) $  & \\
