--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -1,33 +1,33 @@
-\begin{tabular}{lcccccc} \toprule
-	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	\\ 
-Baseline	&	\multicolumn{2}{c}{2.53 (s.e. 0.97)}	&	\multicolumn{2}{c}{9.75 (s.e. 4.64)}	&	\multicolumn{2}{c}{5.56 (s.e. 2.39)}	\\ \\
-\multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to Age 79, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\ 
+\begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
+	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ 
+Baseline	&	\multicolumn{2}{c}{5.58 (s.e. 2.32)}	&	\multicolumn{2}{c}{9.75 (s.e. 4.59)}	&	\multicolumn{2}{c}{2.59 (s.e. 0.97)}	\\ \\
+\multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to Age 79, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
 \multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
 Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
-	&	2.81	&	2.74	&	9.79	&	9.76	&	5.99	&	5.32	\\
-	&	(0.94)	&	(0.78)	&	(5.03)	&	(3.60)	&	(2.31)	&	(2.03)	\\ \midrule
+	&	\textbf{6.02}	&	\textbf{5.32}	&	\textbf{9.81}	&	\textbf{9.73}	&	\textbf{2.88}	&	\textbf{2.80}	\\
+	&	(2.26)	&	(2.04) &	(5.06)	&	(3.60)	&	(0.93)	&	(0.79)	\\ \midrule
 Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
-Span	&	1.11	&	2.72	&	1.85	&	2.72	&	1.62	&	2.05	\\
-	&	(0.41)	&	(2.00)	&	(0.63)	&	(2.00)	&	(0.42)	&	(0.83)	\\ \midrule
+Span	&	1.54	&	\textbf{1.80}	&	\textbf{2.15}	&	\textbf{2.55}	&	\textbf{1.18}	&	\textbf{1.52}	\\
+	&	(0.43)	&	(0.47)	&	(0.70)	&	(0.88)	&	(0.40)	&	(0.48)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
-factuals	&	4.77	&	2.30	&	4.38	&	12.47	&	4.41	&	6.22	\\
-	&	(1.40)	&	(0.90)	&	(2.65)	&	(5.13)	&	(1.34)	&	(2.23)	\\ \midrule
+factuals	&	\textbf{4.42}	&	\textbf{6.29}	&	4.32	&	\textbf{12.38}	&	\textbf{4.81}	&	\textbf{2.37}	\\
+	&	(1.39)	&	(2.23)	&	(2.70)	&	(5.16)	&	(1.42)	&	(0.91)	\\ \midrule
 Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	\\
-loss	&	3.60	&	1.99	&	14.54	&	7.35	&	8.25	&	4.22	\\
-	&	(1.43)	&	(0.77)	&	(6.96)	&	(3.49)	&	(3.58)	&	(1.80)	\\ \midrule
+loss	&	\textbf{8.29}	&	\textbf{4.23}	&	\textbf{14.55}	&	\textbf{7.35}	&	\textbf{3.69}	&	\textbf{2.03}	\\
+	&	(3.49)	&	(1.75)	&	(6.88)	&	(3.45)	&	(1.43)	&	(0.77)	\\ \midrule
 Discount 	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	\\
-Rate	&	4.92	&	1.37	&	25.40	&	3.54	&	13.39	&	2.34	\\
-	&	(3.36)	&	(0.36)	&	(13.58)	&	(1.50)	&	(6.57)	&	(0.84)	\\ \midrule
+Rate	&	\textbf{13.40}	&	\textbf{2.37}	&	\textbf{25.38}	&	\textbf{3.55}	&	4.98	&	1.44	\\
+	&	(6.51)	&	(0.80)	&	(13.55)	&	(1.45)	&	(3.36)	&	(0.37)	\\ \midrule
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
-Income	&	2.79	&		&	9.94	&		&	5.79	&		\\
-	&	(1.00)	&		&	(4.65)	&		&	(2.41)	&		\\ \midrule
+Income	&	\textbf{5.81}	&	\textbf{6.07}	&	\textbf{9.94}	&	\textbf{10.27}	&	\textbf{2.86}	&	\textbf{3.15}	\\
+	&	(2.33)	&	(2.49)	&	(4.58)	&	(4.67)	&	(1.01)	&	(1.10)	\\ \midrule
 Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
-Income	&	2.39	&	2.66	&	8.90	&	10.60	&	5.34	&	5.79	\\
-	&	(0.86)	&	(1.09)	&	(4.35)	&	(5.00)	&	(2.27)	&	(2.53)	\\ \midrule
-Crime	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	\\
-	&	2.64	&	2.17	&	11.74	&	7.28	&	5.25	&	4.06	\\
-	&	(1.02)	&	(0.93)	&	(5.57)	&	(3.44)	&	(2.37)	&	(1.67)	\\ \midrule
+Income	&	\textbf{5.36}	&	\textbf{5.80}	&	\textbf{8.89}	&	\textbf{10.61}	&	\textbf{2.45}	&	\textbf{2.72}	\\
+	&	(2.22)	&	(2.45)	&	(4.29)	&	(4.95)	&	(0.86)	&	(1.09)	\\ \midrule
+Crime	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	\\
+	&	\textbf{5.26}	&	\textbf{4.07}	&	\textbf{11.75}	&	\textbf{7.29}	&	\textbf{2.70}	&	\textbf{2.23}	\\
+	&	(2.31)	&	(1.59)	&	(5.59)	&	(3.41)	&	(1.03)	&	(0.94)	\\ \midrule
 Health	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	\\
-(QALYs)	&	2.37	&	2.68	&	9.05	&	10.49	&	4.72	&	6.41	\\
-	&	(0.91)	&	(1.25)	&	(4.39)	&	(5.25)	&	(2.34)	&	(2.64)	\\ \bottomrule
-\end{tabular}
+(QALYs)	&	\textbf{4.75}	&	\textbf{6.43}	&	\textbf{9.05}	&	\textbf{10.49}	&	\textbf{2.43}	&	\textbf{2.74}	\\
+	&	(2.26)	&	(2.59)	&	(4.32)	&	(5.21)	&	(0.91)	&	(1.25)	\\ \bottomrule
+\end{tabular} 
